[Xwayland] Mouse cursor display issue when hovering over button
Hello,
I have an application (GTK2) that when hovering over a button should display a hand, and when leaving the button the arrow should reappear like on a hyperlink, but the hand does not disappear on my x86-64 PC on Ubuntu 24.04.1 LTS and Fedora 40.
This bug occur only on Wayland, not Xorg.
I can reproduce it with GParted which I think also uses GTK 2 and XWayland on Ubuntu 24.04.1 LTS and Fedora 40 x86-64.
The mouse cursor doesn't correspond to a text field.
I tried on Kubuntu 24.04.1 LTS, XWayland and GTK2 work correctly.
Thanks
Edited by Pol Poggi