xwayland: Drop cursor frame callback

It looks like we do not get the frame callback reliably on the cursor
surface, not sure why.

Drop the frame callback and update the cursor unconditionally.

Closes: https://gitlab.freedesktop.org/xorg/xserver/-/issues/1756
Signed-off-by: Olivier Fourdan <ofourdan@redhat.com>